[workspace]
resolver = "2"

[dependencies]
itertools = "0.11.0"
faer = "0.12.0"

[workspace.package]
rust-version = "1.73"
version = "0.1.0"
edition = "2021"
authors = ["Mossa Merhi Reimert"]
license-file = "LICENSE"

[package]
name = "vetneuron"
description = "A pure Rust implementation of Veterinary Epidemiology things"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
